now fix the z-index

--- a/src/styles/components/editor.scss
+++ b/src/styles/components/editor.scss
@@ -519,8 +519,8 @@
 }
 
 .editorHeader{
-  @apply flex flex-none flex-row items-center border-b border-neutral-200 bg-white py-2 pl-3 pr-3 text-black dark:border-neutral-200 dark:bg-white dark:text-black sticky top-16 z-[50]; 
-
+  @apply flex flex-none flex-row items-center border-b border-neutral-200 bg-white py-2 pl-3 pr-3 text-black dark:border-neutral-200 dark:bg-white dark:text-black sticky top-16; 
+  z-index: 49; 
 }
 
 
